fix bug in cart page/remove, fix page not covered by footer. add navbar cart icon. fix cart page/ +- alignment problem. give clickable words pointer cursor.

--- a/src/App.css
+++ b/src/App.css
@@ -79,14 +79,15 @@ header {
 }
 
 .product-button {
-  padding: 0.5em;
-  margin: 0.5em;
+  padding: 0 3em;
+  margin: 0.5em 0;
   /* border-radius: 0.5em; */
   /* color: white; */
   /* background-color: black; */
   font-style: italic;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   /* background-color: antiquewhite */
+  width: 23em;
 }
 
 .productImage {
@@ -105,7 +106,7 @@ header {
   width: 25em;
   /* padding: 1.5em; */
   padding: 0.5em;
-  }
+}
 
 .row_flex {
   display: flex;
@@ -400,7 +401,7 @@ header {
   width: 100%;
   background-color: #e6e9eb;
   text-align: center;
-  }
+}
 
 .footer {
   position: fixed;
@@ -445,3 +446,46 @@ header {
 .note_div {
   margin-top: 2em;
 }
+
+.cart-icon-div {
+  display: flex;
+}
+
+.cart-count {
+  font-size: 15px;
+}
+
+.cat-cursor {
+  cursor: pointer;
+}
+
+.home-page-div {
+  margin-bottom: 3em;
+
+}
+
+.product-page-div {
+  margin-bottom: 3em;
+}
+
+.plus-minus {
+  position: relative;
+  bottom: 4px;
+  cursor: pointer;
+}
+
+.remove-pointer{
+  cursor: pointer;
+}
+
+.cart-page-div{
+  margin-bottom: 3em;
+}
+
+.checkout-page-div{
+  margin-bottom: 3em;
+}
+
+.thankyou-page-div{
+  margin-bottom: 3em;
+  }
